@startuml
title Class view — Connection request consent

skinparam backgroundColor #FFFDF7
skinparam shadowing false
skinparam defaultFontName Arial
skinparam defaultFontColor #18352F
skinparam ArrowColor #2F6F67
skinparam packageBorderColor #477B73
skinparam packageBackgroundColor #EEF6F3
skinparam rectangleBorderColor #477B73
skinparam rectangleBackgroundColor #FFFFFF
skinparam componentBorderColor #8A5A1F
skinparam componentBackgroundColor #FFF6E6
skinparam databaseBorderColor #4E668E
skinparam databaseBackgroundColor #EEF3FB
skinparam actorBorderColor #18352F
skinparam actorBackgroundColor #FFFFFF
skinparam classBorderColor #477B73
skinparam classBackgroundColor #FFFFFF
skinparam sequenceBoxBorderColor #477B73
skinparam sequenceBoxBackgroundColor #F4F8F6
skinparam ParticipantBorderColor #477B73
skinparam ParticipantBackgroundColor #FFFFFF
skinparam BoxPadding 10
hide stereotype

left to right direction
package "Reconciliation Through Relationships application" {
  package "Connection request consent structure" {
    class "ConnectButton" as type0 {
      +sendRequest()
      +cancelRequest()
    }
    
    class "ConnectionChat" as type1 {
      +myConnectedField
      +handleConnect()
    }
    
    entity "Connection" as type2 {
      +participant_a_connected
      +participant_b_connected
      +status
      +connected_at
    }
    
    entity "SystemSetting" as type3 {
      +key: auto_matching_enabled
      +value: boolean
    }
    
    entity "Notification" as type4 {
      +type: connect_request
      +data.connection_id
    }
  }
}
type0 --> type2 : creates/deletes
type1 --> type2 : updates consent
type1 --> type3 : reads policy
type1 --> type4 : notifies partner
legend bottom
  Class = implementation component or value shape
  Interface = public TypeScript contract
  Entity = persisted or domain data record
endlegend
@enduml
